# gnome-software

./: configure.ac  meson.build  meson_options.txt
contrib/: gnome-software.spec.in
lib/: gs-app.c  gs-app.h  gs-cmd.c  gs-permission.c  gs-permission.h  gs-plugin-loader.c  gs-plugin-types.h  gs-plugin.c  gs-self-test.c  meson.build
plugins/: Makefile.am  meson.build
plugins/apt/: Makefile.am  gs-plugin-apt.cc  org.gnome.Software.Plugin.Apt.metainfo.xml.in
plugins/core/: gs-appstream.c
plugins/dpkg/: gs-plugin-dpkg.c
plugins/flatpak/: gs-flatpak.c  gs-flatpak.h
plugins/modalias/: gs-self-test.c
plugins/packagekit/: gs-plugin-systemd-updates.c
plugins/shell-extensions/: gs-plugin-shell-extensions.c  gs-self-test.c
plugins/snap/: gs-plugin-snap.c
po/: POTFILES.in
src/: Makefile.am  gnome-software-editor.gresource.xml  gnome-software-local-file.desktop.in  gnome-software.ui  gs-app-row.c  gs-application.c  gs-category-page.c  gs-cmd.c  gs-common.c  gs-common.h  gs-dbus-helper.c  gs-details-page.c  gs-details-page.ui  gs-editor.c  gs-editor.ui  gs-feature-tile.c  gs-main.c  gs-overview-page.c  gs-plugin-loader-sync.c  gs-plugin-loader-sync.h  gs-plugin-loader.c  gs-plugin-loader.h  gs-plugin-vfuncs.h  gs-plugin.h  gs-search-page.c  gs-self-test.c  gs-shell-details.c  gs-shell-details.ui  gs-shell-search.c  gs-shell-updates.c  gs-shell.c  gs-update-dialog.c  gs-update-monitor.c  gs-updates-page.c  gs-utils.c  gs-utils.h  gtk-style-hc.css  gtk-style.css  meson.build  org.gnome.Software.Editor.desktop.in  (+1 more)
src/plugins/: Makefile.am  gs-plugin-appstream.c  (+8 more)
(+1 files in other folders)
